--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^9.1.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
+    "use-query-params": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
