--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-star-ratings": "^2.3.0",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^9.1.4",
     "slick-carousel": "^1.8.1",
