--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-quiz-component": "^0.5.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
