--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^38.0.1",
         "@ckeditor/ckeditor5-react": "^6.0.0",
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@mui/icons-material": "^5.11.16",
-        "@mui/material": "^5.13.0",
+        "@mui/material": "^5.13.7",
         "@mui/styled-engine-sc": "^5.12.0",
+        "@mui/x-date-pickers": "^6.9.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
         "bootstrap": "^5.2.0",
+        "dayjs": "^1.11.9",
         "js-cookie": "^3.0.1",
         "lodash": "^4.17.21",
         "mdb-react-ui-kit": "^6.0.0",
@@ -36,6 +38,7 @@
         "reactstrap": "^9.1.4",
         "slick-carousel": "^1.8.1",
         "styled-component": "^2.8.0",
+        "styled-components": "^5.3.11",
         "swiper": "^8.4.7",
         "use-query-params": "^2.2.0",
         "web-vitals": "^2.1.4"
