--- a/package.json
+++ b/package.json
@@ -3,21 +3,27 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^38.0.1",
+        "@ckeditor/ckeditor5-build-classic": "^38.1.0",
         "@ckeditor/ckeditor5-react": "^6.0.0",
+
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@material-ui/pickers": "^3.3.10",
         "@mui/icons-material": "^5.11.16",
+        "@mui/lab": "^5.0.0-alpha.135",
         "@mui/material": "^5.13.0",
         "@mui/styled-engine-sc": "^5.12.0",
+        "@mui/x-date-pickers": "^6.9.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
         "bootstrap": "^5.2.0",
+        "date-fns": "^2.30.0",
+        "dayjs": "^1.11.9",
         "js-cookie": "^3.0.1",
         "lodash": "^4.17.21",
         "mdb-react-ui-kit": "^6.0.0",
@@ -64,4 +70,5 @@
             "last 1 safari version"
         ]
     }
+  
 }
