--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lodash": "^4.17.21",
         "mdb-react-ui-kit": "^6.0.0",
         "react": "^18.2.0",
+        "react-autosuggest": "^10.1.0",
         "react-bootstrap-table-next": "^3.3.5",
         "react-bootstrap-table2-paginator": "2.1.0",
         "react-bootstrap-validation": "^0.1.11",
