--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@ionic/react": "^7.5.3",
+        "@ionic/react-router": "^7.5.3",
         "@material-ui/pickers": "^3.3.10",
+        "@mdbootstrap/react-testimonial-slider": "^1.0.0",
         "@mui/icons-material": "^5.11.16",
         "@mui/lab": "^5.0.0-alpha.135",
         "@mui/material": "^5.13.0",
@@ -44,7 +47,7 @@
         "slick-carousel": "^1.8.1",
         "styled-component": "^2.8.0",
         "styled-components": "^5.3.11",
-        "swiper": "^8.4.7",
+        "swiper": "^11.0.3",
         "use-query-params": "^2.2.0",
         "web-vitals": "^2.1.4"
     },
